examples/semantics/errors/error18a.grace
fun error18a () : nothing
	fun foo(i1,i2:int): nothing
	{
		puti(8);
	}
{
	foo(8);
}
